--- a/index.html
+++ b/index.html
@@ -5,20 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Sinuquinha - Mira Semáforo</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.158.0/three.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
     <div id="fullscreen-btn">TELA CHEIA</div>
     
-    <div id="placar-lisas"><div class="label-placar">Lisas</div></div>
-    <div id="placar-listras"><div class="label-placar">Listras</div></div>
+    <div id="placar-lisas">
+        <div class="label-placar">Lisas</div>
+        <span id="score-lisas">0</span>
+    </div>
+    <div id="placar-listras">
+        <div class="label-placar">Listras</div>
+        <span id="score-listras">0</span>
+    </div>
 
     <div id="power-container"><div id="power-meter"></div></div>
     
     <div id="ui-overlay">
-        <div id="turn-msg">JOGADOR 1</div>
+        <div id="turn-msg">AGUARDANDO JOGADORES...</div>
         <div id="status-text" class="status-msg">Verde = Certo | Vermelho = Falta</div>
     </div>
 
     <script type="module" src="script.js"></script>
 </body>
 </html>
+
