--- a/index.html
+++ b/index.html
@@ -11,23 +11,16 @@
 <body>
     <div id="fullscreen-btn">TELA CHEIA</div>
     
-    <div id="placar-lisas">
-        <div class="label-placar">Lisas</div>
-        <span id="score-lisas">0</span>
-    </div>
-    <div id="placar-listras">
-        <div class="label-placar">Listras</div>
-        <span id="score-listras">0</span>
-    </div>
+    <div id="placar-lisas">LISAS<br><span id="score-lisas">0</span></div>
+    <div id="placar-listras">LISTRAS<br><span id="score-listras">0</span></div>
 
     <div id="power-container"><div id="power-meter"></div></div>
     
     <div id="ui-overlay">
-        <div id="turn-msg">AGUARDANDO JOGADORES...</div>
-        <div id="status-text" class="status-msg">Verde = Certo | Vermelho = Falta</div>
+        <div id="turn-msg">AGUARDANDO JOGADOR...</div>
+        <div id="status-text">Verde = Certo | Vermelho = Falta</div>
     </div>
 
     <script type="module" src="script.js"></script>
 </body>
 </html>
-
