--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Sinuquinha - Mira Semáforo</title>
+    <title>Sinuquinha Offline - Mira Semáforo</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.158.0/three.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
     <div id="fullscreen-btn">TELA CHEIA</div>
@@ -17,10 +16,11 @@
     <div id="power-container"><div id="power-meter"></div></div>
     
     <div id="ui-overlay">
-        <div id="turn-msg">AGUARDANDO JOGADOR...</div>
+        <div id="turn-msg">VEZ DO JOGADOR 1</div>
         <div id="status-text">Verde = Certo | Vermelho = Falta</div>
     </div>
 
     <script type="module" src="script.js"></script>
 </body>
 </html>
+
