--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Sinuquinha Realista</title>
+    <title>Sinuquinha BAR</title>
     <link rel="stylesheet" href="style.css">
     <script type="importmap">
         {
@@ -15,16 +15,10 @@
 </head>
 <body>
     <div id="power-container"><div id="power-meter"></div></div>
-    <button id="fullscreen-btn">TELA CHEIA</button>
-    
     <div id="ui-overlay">
-        <div id="turn-msg">TURNO: JOGADOR 1</div>
-        <div class="status-msg" id="game-status">Posicione a bola branca ou mire para jogar</div>
+        <div id="turn-msg">SUA VEZ</div>
+        <div class="status-msg">Arraste para mirar e solte para dar a tacada</div>
     </div>
-
-    <div id="list-pares" class="pocket-list"></div>
-    <div id="list-impares" class="pocket-list"></div>
-
     <script type="module" src="script.js"></script>
 </body>
 </html>
